--- a/src/Neptuo.WebSite/Views/Content/Home.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/Home.cshtml
@@ -2,6 +2,9 @@
 
 <div class="intro">
     <div class="intro-content container">
+        <span class="language">
+            @Html.ModelLink("Tuto stránku vám též můžeme nabídnout v češtině.", new HomeCzechRoute())
+        </span>
         <h1>Hello!</h1>
     </div>
 </div>
