--- a/src/Neptuo.WebSite/Views/Content/Home.cz.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/Home.cz.cshtml
@@ -2,6 +2,9 @@
 
 <div class="intro">
     <div class="intro-content container">
+        <span class="language">
+            @Html.ModelLink("We can offer you this page in English.", new HomeRoute())
+        </span>
         <h1>Vítejte!</h1>
     </div>
 </div>
@@ -62,10 +65,10 @@
             <div class="box">
                 <div class="folder-heading">
                     <span>C#</span>
-                    <h2>Oblíbený jazyk</h2>
+                    <h2>Oblíbené</h2>
                 </div>
                 <p class="first">
-                    Nás nejoblíbenější programovací jazyk, podporující Windows a díky .NET Core také Linux a MAC OSX.
+                    Nás oblíbenější programovací jazyk, podporující Windows a díky .NET Core také Linux a MAC OSX.
                 </p>
             </div>
         </div>
