--- a/src/Neptuo.WebSite/Content/web.css
+++ b/src/Neptuo.WebSite/Content/web.css
@@ -201,6 +201,16 @@ body {
     text-align: left;
 }
 
+.intro span.language {
+    width: 200px;
+    text-align: right;
+    float: right;
+}
+
+.intro span.language a:hover {
+    text-decoration: none;
+}
+
 .body {
     margin-top: 100px;
     margin-bottom: 20px;
