--- a/src/Neptuo.WebSite/Views/Content/Project.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/Project.cshtml
@@ -108,6 +108,12 @@
                     }
                 </div>
             }
+            else if (project.Text2 != null)
+            {
+                <div class="folder">
+                    @Html.Raw(project.Text2.ContentToHtml())
+                </div>
+            }
 
 
             if (project.Images != null)
