--- a/src/Neptuo.WebSite/Views/Shared/_Layout.cshtml
+++ b/src/Neptuo.WebSite/Views/Shared/_Layout.cshtml
@@ -106,5 +106,13 @@
         ga('send', 'pageview');
     </script>
     @RenderSection("Javascript", false)
+    <script type="application/ld+json">
+        {
+            "@@context": "http://schema.org",
+            "@@type": "Organization",
+            "url": "http://www.neptuo.com",
+            "logo": "/Content/Images/Logo-220.png"
+        }
+    </script>
 </body>
 </html>
