Replace 'Hello!' with 'Greetings!'

--- a/src/Neptuo.WebSite/Views/Content/Home.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/Home.cshtml
@@ -5,7 +5,7 @@
         <span class="language">
             @Html.ModelLink("Tuto stránku vám též můžeme nabídnout v češtině.", new HomeCzechRoute())
         </span>
-        <h1>Hello!</h1>
+        <h1>Greetings!</h1>
     </div>
 </div>
 
