Move dots after links.

--- a/src/Neptuo.WebSite/Views/Content/Project.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/Project.cshtml
@@ -50,14 +50,14 @@
                     @if (!String.IsNullOrEmpty(project.Licence))
                     {
                         <li>
-                            <a target="_blank" href="@project.LicenceUrl"><span>Licensed under @project.Licence.</span></a>
+                            <a target="_blank" href="@project.LicenceUrl"><span>Licensed under @project.Licence</span></a>.
                         </li>
                     }
 
                     @if (!String.IsNullOrEmpty(project.DocumentationUrl))
                     {
                         <li>
-                            <a target="_blank" href="@project.DocumentationUrl">Project documentation.</a>
+                            <a target="_blank" href="@project.DocumentationUrl">Project documentation</a>.
                         </li>
                     }
 
