Add list of all projects.

--- a/src/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -12,6 +12,10 @@
 </div>
 
 <div class="container">
+    <div class="folder">
+        
+        <h2 class="center">@Html.ModelLink("All projects", ProjectRoute.All())</h2>
+    </div>
     <div class="col-md-6">
         <div class="folder box">
             <div class="folder-heading">
