--- a/src/Neptuo.WebSite/Content/Stylesheet/common.scss
+++ b/src/Neptuo.WebSite/Content/Stylesheet/common.scss
@@ -2,6 +2,7 @@
 
 h2, h3 {
     margin: 0;
+    color: #157FCC;
 }
 
 a img {
@@ -68,4 +69,9 @@ input[type=text]:focus {
 
 .col-md-2, .col-md-3, .col-md-4, .col-md-6, .col-md-7, .col-md-8 {
     padding: 0;
+}
+
+blockquote {
+    border-left: 5px solid #157FCC;
+    background: linear-gradient(to right, #dfefff 0%, #ffffff 85%);
 }
