--- a/src/Neptuo.WebSite/Content/web.css
+++ b/src/Neptuo.WebSite/Content/web.css
@@ -1,6 +1,7 @@
 ﻿/* ====== COMMON =============================================================================== */
 h2, h3 {
     margin: 0;
+    color: #157FCC;
 }
 
 a img {
@@ -66,6 +67,11 @@ input[type=text]:focus {
 
 .col-md-2, .col-md-3, .col-md-4, .col-md-6, .col-md-7, .col-md-8 {
     padding: 0;
+}
+
+blockquote {
+    border-left: 5px solid #157FCC;
+    background: linear-gradient(to right, #dfefff 0%, #ffffff 85%);
 }
 
 /* ============================================================================================= */
