Add blog post about Blazor boot screen. Update blog post URL for this 2018, so month is in D2 and day is of.

--- a/src/Neptuo.WebSite/Views/Content/Blog.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/Blog.cshtml
@@ -29,7 +29,7 @@
                     <div class="month">@post.ReleaseDate.ToString("MMM", new CultureInfo("en-US"))</div>
                 </div>
                 <div class="folder-content">
-                    <h2 class="folder-heading">@Html.ModelLink(post.Title, new BlogPostRoute(post.ReleaseDate, post.Url))</h2>
+                    <h2 class="folder-heading">@Html.ModelLink(post.Title, post.ToRouteModel())</h2>
                     <article>@post.Description</article>
                 </div>
                 <div class="clear"></div>
