Make links to atom feed and author HTTPS.

--- a/src/Neptuo.WebSite/Views/Shared/_Layout.cshtml
+++ b/src/Neptuo.WebSite/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     </li>
 }
 @{ 
-    var blogUrl = "http://www.neptuo.com" + Url.ModelUrl(new BlogAtomRoute());
+    var blogUrl = "https://www.neptuo.com" + Url.ModelUrl(new BlogAtomRoute());
 }
 <!doctype html>
 <html>
@@ -62,7 +62,7 @@
                 @RenderSection("FooterLeft", false)
             </div>
             <div class="right">
-                <span>Created by <a target="_blank" href="http://mara.neptuo.com">Marek Fišera</a></span>
+                <span>Created by <a target="_blank" href="https://mara.neptuo.com">Marek Fišera</a></span>
                 @RenderSection("FooterRight", false)
             </div>
             <div class="center">
