--- a/src/Neptuo.WebSite/Content/Stylesheet/folder.scss
+++ b/src/Neptuo.WebSite/Content/Stylesheet/folder.scss
@@ -15,6 +15,10 @@
     border-bottom: 1px solid #C0C0C0;
 }
 
+.folder-headless {
+    padding-top: 15px;
+}
+
 .folder-heading h1, .folder-heading h2, .folder-heading h3, .folder-heading h4, .folder-heading h5, .folder-heading h6 {
     margin: 0;
     padding: 0;
