--- a/src/Neptuo.WebSite/Content/web.css
+++ b/src/Neptuo.WebSite/Content/web.css
@@ -273,9 +273,13 @@ img.main-image {
     display: block;
 }
 
+.additional-image-list {
+    margin: 0 -10px;
+}
+
 img.additional-image {
     height: 150px;
-    margin: 0px 10px 10px 0;
+    margin: 10px;
     float: left;
     display: block;
 }
@@ -313,6 +317,10 @@ ul.version li li {
     padding-bottom: 5px;
     color: #999999;
     border-bottom: 1px solid #C0C0C0;
+}
+
+.folder-headless {
+    padding-top: 15px;
 }
 
 .folder-heading h1, .folder-heading h2, .folder-heading h3, .folder-heading h4, .folder-heading h5, .folder-heading h6 {
