VSIX: Change link to VSIX gallery from guid to itemName. Add v1.1 of BuildHistory and FindInFolder. Remove FastBuildCancellation.

--- a/src/Neptuo.WebSite/Views/Content/Project.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/Project.cshtml
@@ -118,7 +118,7 @@
                         else
                         {
                             <li>
-                                Current version can be installed from <a target="_blank" href="https://marketplace.visualstudio.com/vsgallery/@project.VsixGalleryId">Official VSIX gallery</a>.
+                                Current version can be installed from <a target="_blank" href="https://marketplace.visualstudio.com/items?itemName=@project.VsixGalleryId">Official VSIX gallery</a>.
                             </li>
                         }
                     }
