--- a/src/Neptuo.WebSite/Views/Shared/_Layout.cshtml
+++ b/src/Neptuo.WebSite/Views/Shared/_Layout.cshtml
@@ -22,11 +22,12 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <title>@((ViewBag.Title != null ? ViewBag.Title + " - " : "") + "Neptuo")</title>
-    
+
     <link rel="shortcut icon" type="image/x-icon" href="~/Content/Images/favicon.png" />
 
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="~/Content/featherlight.min.css" rel="stylesheet" />
     <link href="~/Content/web.css" rel="stylesheet" />
 
     <link rel="alternate" type="application/rss+xml" title="Neptuo Blog" href="@blogUrl" />
@@ -75,6 +76,8 @@
         </div>
     </footer>
 
+    <script src="~/Scripts/jquery-1.9.1.js"></script>
+    <script src="~/Scripts/featherlight.min.js"></script>
     <script>
 
         function onSwitcherClicked(e) {
@@ -102,12 +105,12 @@
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-12031460-1', 'auto');
     </script>
-    @if (ViewBag.IsError == true) 
+    @if (ViewBag.IsError == true)
     {
         <script>
             ga('send', {
@@ -127,10 +130,10 @@
     @RenderSection("Javascript", false)
     <script type="application/ld+json">
         {
-            "@@context": "http://schema.org",
-            "@@type": "Organization",
-            "url": "http://www.neptuo.com",
-            "logo": "/Content/Images/Logo-220.png"
+        "@@context": "http://schema.org",
+        "@@type": "Organization",
+        "url": "http://www.neptuo.com",
+        "logo": "/Content/Images/Logo-220.png"
         }
     </script>
 </body>
