#47 - Open external links a new tab. Add icon after external links.

--- a/src/Neptuo.WebSite/Content/Stylesheet/common.scss
+++ b/src/Neptuo.WebSite/Content/Stylesheet/common.scss
@@ -75,3 +75,8 @@ blockquote {
     border-left: 5px solid #157FCC;
     background: linear-gradient(to right, #dfefff 0%, #ffffff 85%);
 }
+
+a.external-link::after {
+    content: "🗗";
+    display: inline;
+}
