--- a/src/Neptuo.WebSite/Content/web.css
+++ b/src/Neptuo.WebSite/Content/web.css
@@ -1,4 +1,5 @@
-﻿/* ====== COMMON =============================================================================== */
+﻿@charset "UTF-8";
+/* ====== COMMON =============================================================================== */
 h2, h3 {
     margin: 0;
     color: #157FCC;
@@ -72,6 +73,11 @@ input[type=text]:focus {
 blockquote {
     border-left: 5px solid #157FCC;
     background: linear-gradient(to right, #dfefff 0%, #ffffff 85%);
+}
+
+a.external-link::after {
+    content: "🗗";
+    display: inline;
 }
 
 /* ============================================================================================= */
@@ -748,4 +754,3 @@ input.folder {
         padding-top: 10px;
     }
 }
-
